crates/rattler_build_diffy/src/patch/snapshots/rattler_build_diffy__patch__parse__tests__real_world_patches@0004-win-remove-ucrt-Lld.zig.patch.snap
---
source: crates/rattler_build_diffy/src/patch/parse.rs
expression: patches
input_file: crates/rattler_build_diffy/src/patch/test-data/0004-win-remove-ucrt-Lld.zig.patch
---
Ok(
    [
        Patch {
            original: Some(
                Filename(
                    "a/src/link/Lld.zig.old",
                ),
            ),
            modified: Some(
                Filename(
                    "b/src/link/Lld.zig",
                ),
            ),
            hunks: [
                Hunk {
                    old_range: HunkRange {
                        start: 687,
                        len: 1,
                    },
                    new_range: HunkRange {
                        start: 687,
                        len: 1,
                    },
                    function_context: None,
                    lines: [
                        Delete(
                            "                        try argv.append(try allocPrint(arena, \"{s}ucrt.lib\", .{lib_str}));\n",
                        ),
                        Insert(
                            "                        // try argv.append(try allocPrint(arena, \"{s}ucrt.lib\", .{lib_str}));\n",
                        ),
                    ],
                },
            ],
        },
    ],
)
